--- a/_config.yml
+++ b/_config.yml
@@ -77,9 +77,8 @@ pirsch_analytics: # your Pirsch analytics site ID (length 32 characters)
 openpanel_analytics: # your Openpanel analytics client ID (format: XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX)
 
 # For Google Search Console, see https://support.google.com/webmasters/answer/9008080?hl=en#meta_tag_verification&zippy=%2Chtml-tag
-google_site_verification: 3TeSywoUO8mXzW-j5ac8HCnRQb5EdAbgcBNReSu5rpM# # your google-site-verification ID (Google Search Console)
+google_site_verification: gEhGBkUk5p1vXpFfujpnbFmePv1NOWDvXYg4sDpBzE8 # your google-site-verification ID (Google Search Console)
 bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
-
 
 # -----------------------------------------------------------------------------
 # Newsletter
